thirty fourth step to new crm