@@ -1,95 +1,90 @@
 package org.example.userservice.restControllers.transaction;
 
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.Positive;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import org.example.userservice.mappers.TransactionCategoryMapper;
 import org.example.userservice.models.transaction.TransactionCategory;
 import org.example.userservice.models.transaction.TransactionType;
 import org.example.userservice.models.dto.transaction.TransactionCategoryCreateDTO;
 import org.example.userservice.models.dto.transaction.TransactionCategoryDTO;
 import org.example.userservice.services.transaction.TransactionCategoryService;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Slf4j
+import static org.springframework.http.HttpStatus.CREATED;
+
 @RestController
 @RequestMapping("/api/v1/transaction-categories")
 @RequiredArgsConstructor
+@Validated
 public class TransactionCategoryController {
     private final TransactionCategoryService categoryService;
+    private final TransactionCategoryMapper transactionCategoryMapper;
 
     @GetMapping("/type/{type}")
     @PreAuthorize("hasAuthority('finance:view')")
-    public ResponseEntity<List<TransactionCategoryDTO>> getCategoriesByType(@PathVariable TransactionType type) {
+    public ResponseEntity<List<TransactionCategoryDTO>> getCategoriesByType(
+            @PathVariable @NonNull TransactionType type) {
         List<TransactionCategory> categories = categoryService.getCategoriesByType(type);
         List<TransactionCategoryDTO> dtos = categories.stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(transactionCategoryMapper::transactionCategoryToTransactionCategoryDTO)
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
     @GetMapping("/{id}")
     @PreAuthorize("hasAuthority('finance:view')")
-    public ResponseEntity<TransactionCategoryDTO> getCategoryById(@PathVariable Long id) {
+    public ResponseEntity<TransactionCategoryDTO> getCategoryById(
+            @PathVariable @Positive @NonNull Long id) {
         TransactionCategory category = categoryService.getCategoryById(id);
-        return ResponseEntity.ok(mapToDTO(category));
+        return ResponseEntity.ok(transactionCategoryMapper.transactionCategoryToTransactionCategoryDTO(category));
     }
 
     @PostMapping
     @PreAuthorize("hasAuthority('settings_finance:create')")
-    public ResponseEntity<TransactionCategoryDTO> createCategory(@RequestBody TransactionCategoryCreateDTO dto) {
-        TransactionCategory category = new TransactionCategory();
-        category.setType(dto.getType());
-        category.setName(dto.getName());
-        category.setDescription(dto.getDescription());
-        category.setIsActive(true);
+    public ResponseEntity<TransactionCategoryDTO> createCategory(
+            @RequestBody @Valid @NonNull TransactionCategoryCreateDTO dto) {
+        TransactionCategory category = transactionCategoryMapper.transactionCategoryCreateDTOToTransactionCategory(dto);
         TransactionCategory created = categoryService.createCategory(category);
-        return ResponseEntity.status(HttpStatus.CREATED).body(mapToDTO(created));
+        TransactionCategoryDTO categoryDTO = transactionCategoryMapper.transactionCategoryToTransactionCategoryDTO(created);
+        
+        URI location = ServletUriComponentsBuilder.fromCurrentRequest()
+                .path("/{id}")
+                .buildAndExpand(categoryDTO.getId())
+                .toUri();
+        return ResponseEntity.status(CREATED).location(location).body(categoryDTO);
     }
 
-    @PutMapping("/{id}")
+    @PatchMapping("/{id}")
     @PreAuthorize("hasAuthority('settings_finance:edit')")
-    public ResponseEntity<TransactionCategoryDTO> updateCategory(@PathVariable Long id, @RequestBody TransactionCategoryCreateDTO dto) {
-        TransactionCategory category = new TransactionCategory();
-        category.setName(dto.getName());
-        category.setDescription(dto.getDescription());
-
+    public ResponseEntity<TransactionCategoryDTO> updateCategory(
+            @PathVariable @Positive @NonNull Long id,
+            @RequestBody @Valid @NonNull TransactionCategoryCreateDTO dto) {
         TransactionCategory existing = categoryService.getCategoryById(id);
-        category.setType(existing.getType());
-
-        category.setIsActive(dto.getIsActive() != null ? dto.getIsActive() : existing.getIsActive());
-        TransactionCategory updated = categoryService.updateCategory(id, category);
-        return ResponseEntity.ok(mapToDTO(updated));
+        transactionCategoryMapper.updateTransactionCategoryFromDTO(existing, dto);
+        TransactionCategory updated = categoryService.updateCategory(id, existing);
+        return ResponseEntity.ok(transactionCategoryMapper.transactionCategoryToTransactionCategoryDTO(updated));
     }
 
     @DeleteMapping("/{id}")
-    @PreAuthorize("hasAuthority('settings_finance:create')")
-    public ResponseEntity<Void> deleteCategory(@PathVariable Long id) {
+    @PreAuthorize("hasAuthority('settings_finance:delete')")
+    public ResponseEntity<Void> deleteCategory(@PathVariable @Positive @NonNull Long id) {
         categoryService.deleteCategory(id);
         return ResponseEntity.noContent().build();
     }
 
     @PatchMapping("/{id}/deactivate")
     @PreAuthorize("hasAuthority('settings:view')")
-    public ResponseEntity<Void> deactivateCategory(@PathVariable Long id) {
+    public ResponseEntity<Void> deactivateCategory(@PathVariable @Positive @NonNull Long id) {
         categoryService.deactivateCategory(id);
         return ResponseEntity.noContent().build();
     }
-
-    private TransactionCategoryDTO mapToDTO(TransactionCategory category) {
-        return new TransactionCategoryDTO(
-                category.getId(),
-                category.getType(),
-                category.getName(),
-                category.getDescription(),
-                category.getIsActive(),
-                category.getCreatedAt(),
-                category.getUpdatedAt()
-        );
-    }
 }
-
