@@ -1,7 +1,11 @@
 package org.example.userservice.restControllers.transaction;
 
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.DecimalMin;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.Positive;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.example.userservice.mappers.TransactionMapper;
 import org.example.userservice.models.dto.transaction.TransactionCreateRequestDTO;
 import org.example.userservice.models.dto.transaction.TransactionDTO;
@@ -11,17 +15,22 @@ import org.example.userservice.services.impl.ITransactionCrudService;
 import org.example.userservice.services.transaction.AccountTransactionService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.math.BigDecimal;
+import java.net.URI;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import static org.springframework.http.HttpStatus.CREATED;
+
 @RestController
 @RequestMapping("/api/v1/transaction")
 @RequiredArgsConstructor
-@Slf4j
+@Validated
 public class TransactionCrudController {
     private final ITransactionCrudService transactionCrudService;
     private final AccountTransactionService accountTransactionService;
@@ -30,43 +39,47 @@ public class TransactionCrudController {
     @PreAuthorize("hasAuthority('finance:view')")
     @PatchMapping("/{transactionId}/amount")
     public ResponseEntity<Void> updateTransactionAmount(
-            @PathVariable("transactionId") Long transactionId,
-            @RequestBody BigDecimal amount) {
-
+            @PathVariable @Positive @NonNull Long transactionId,
+            @RequestBody @DecimalMin(value = "0.0", inclusive = false) @NonNull BigDecimal amount) {
         transactionCrudService.updateTransactionAmount(transactionId, amount);
-
         return ResponseEntity.noContent().build();
     }
 
     @PreAuthorize("hasAuthority('transaction:delete')")
     @DeleteMapping("/{transactionId}")
-    public ResponseEntity<Void> deleteTransaction(@PathVariable Long transactionId) {
+    public ResponseEntity<Void> deleteTransaction(@PathVariable @Positive @NonNull Long transactionId) {
         transactionCrudService.delete(transactionId);
         return ResponseEntity.noContent().build();
     }
 
     @PreAuthorize("hasAuthority('finance:view')")
     @PostMapping
-    public ResponseEntity<TransactionDTO> createTransaction(@RequestBody TransactionCreateRequestDTO request) {
+    public ResponseEntity<TransactionDTO> createTransaction(
+            @RequestBody @Valid @NonNull TransactionCreateRequestDTO request) {
         Transaction transaction = transactionMapper.transactionCreateRequestDTOToTransaction(request);
         Transaction created = accountTransactionService.createTransaction(transaction);
         TransactionDTO response = transactionMapper.transactionToTransactionDTO(created);
-        return ResponseEntity.ok(response);
+        
+        URI location = ServletUriComponentsBuilder.fromCurrentRequest()
+                .path("/{id}")
+                .buildAndExpand(response.getId())
+                .toUri();
+        return ResponseEntity.status(CREATED).location(location).body(response);
     }
 
     @PreAuthorize("hasAuthority('finance:view')")
     @GetMapping("/{transactionId}")
-    public ResponseEntity<TransactionDTO> getTransaction(@PathVariable Long transactionId) {
+    public ResponseEntity<TransactionDTO> getTransaction(@PathVariable @Positive @NonNull Long transactionId) {
         Transaction transaction = accountTransactionService.getTransactionById(transactionId);
         TransactionDTO response = transactionMapper.transactionToTransactionDTO(transaction);
         return ResponseEntity.ok(response);
     }
 
     @PreAuthorize("hasAuthority('finance:view')")
-    @PutMapping("/{transactionId}")
+    @PatchMapping("/{transactionId}")
     public ResponseEntity<TransactionDTO> updateTransaction(
-            @PathVariable Long transactionId,
-            @RequestBody TransactionUpdateDTO updateDTO) {
+            @PathVariable @Positive @NonNull Long transactionId,
+            @RequestBody @Valid @NonNull TransactionUpdateDTO updateDTO) {
         Transaction updated = accountTransactionService.updateTransaction(
                 transactionId,
                 updateDTO.getCategoryId(),
@@ -83,33 +96,34 @@ public class TransactionCrudController {
 
     @PreAuthorize("hasAuthority('finance:view') or hasAuthority('declarant:view')")
     @GetMapping("/vehicle/{vehicleId}")
-    public ResponseEntity<List<TransactionDTO>> getTransactionsByVehicleId(@PathVariable Long vehicleId) {
+    public ResponseEntity<List<TransactionDTO>> getTransactionsByVehicleId(
+            @PathVariable @Positive @NonNull Long vehicleId) {
         List<Transaction> transactions = accountTransactionService.getTransactionsByVehicleId(vehicleId);
         List<TransactionDTO> response = transactions.stream()
                 .map(transactionMapper::transactionToTransactionDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(response);
     }
 
     @PreAuthorize("hasAuthority('finance:view') or hasAuthority('declarant:view')")
     @PostMapping("/vehicle/ids")
-    public ResponseEntity<Map<Long, List<TransactionDTO>>> getTransactionsByVehicleIds(@RequestBody List<Long> vehicleIds) {
+    public ResponseEntity<Map<Long, List<TransactionDTO>>> getTransactionsByVehicleIds(
+            @RequestBody @Valid @NotEmpty @NonNull List<@Positive Long> vehicleIds) {
         Map<Long, List<Transaction>> transactionsMap = accountTransactionService.getTransactionsByVehicleIds(vehicleIds);
         Map<Long, List<TransactionDTO>> response = transactionsMap.entrySet().stream()
                 .collect(Collectors.toMap(
                         Map.Entry::getKey,
                         e -> e.getValue().stream()
                                 .map(transactionMapper::transactionToTransactionDTO)
-                                .collect(Collectors.toList())
+                                .toList()
                 ));
         return ResponseEntity.ok(response);
     }
 
     @PreAuthorize("hasAuthority('warehouse:delete') or hasAuthority('declarant:delete')")
     @DeleteMapping("/vehicle/{vehicleId}")
-    public ResponseEntity<Void> deleteTransactionsByVehicleId(@PathVariable Long vehicleId) {
+    public ResponseEntity<Void> deleteTransactionsByVehicleId(@PathVariable @Positive @NonNull Long vehicleId) {
         accountTransactionService.deleteTransactionsByVehicleId(vehicleId);
         return ResponseEntity.noContent().build();
     }
-
 }
