@@ -1,6 +1,9 @@
 package org.example.userservice.restControllers.user;
 
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.Positive;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.example.userservice.exceptions.user.UserException;
 import org.example.userservice.mappers.UserMapper;
@@ -10,34 +13,39 @@ import org.example.userservice.models.user.User;
 import org.example.userservice.services.impl.IUserService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.net.URI;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/user")
 @RequiredArgsConstructor
+@Validated
 public class UserController {
 
     private final IUserService userService;
     private final UserMapper userMapper;
 
     @GetMapping("/{login}")
-    public ResponseEntity<String> getFullNameByLogin(@PathVariable String login) {
-        return ResponseEntity.ok(userService.getUserByLogin(login).getFullName());
+    public ResponseEntity<String> getFullNameByLogin(@PathVariable @NonNull String login) {
+        User user = userService.getUserByLogin(login);
+        if (user == null) {
+            throw new UserException("USER_NOT_FOUND", String.format("User with login %s not found", login));
+        }
+        return ResponseEntity.ok(user.getFullName());
     }
 
+    @PreAuthorize("hasAuthority('user:view')")
     @GetMapping
     public ResponseEntity<List<UserIdNameDTO>> getUsers() {
         List<User> users = userService.getActiveUsers();
         List<UserIdNameDTO> userIdNameDTO = users.stream()
                 .map(userMapper::userToUserIdNameDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(userIdNameDTO);
     }
 
@@ -46,41 +54,32 @@ public class UserController {
         List<User> users = userService.getUsers();
         List<UserPageDTO> userPageDTO = users.stream()
                 .map(userMapper::userToUserPageDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(userPageDTO);
     }
 
     @GetMapping("/{id}/permissions")
-    public ResponseEntity<List<String>> getUserPermissions(@PathVariable Long id) {
+    public ResponseEntity<List<String>> getUserPermissions(@PathVariable @Positive @NonNull Long id) {
         User user = userService.getUserById(id);
         List<String> permissions = user.getPermissions().stream()
                 .map(Permission::getPermission)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(permissions);
     }
 
     @PreAuthorize("hasAuthority('user:edit')")
-    @PutMapping("/{id}/permissions")
-    public ResponseEntity<Void> updateUserPermissions(@PathVariable Long id,
-                                                      @RequestBody List<String> permissionStrings) {
-        Set<Permission> permissions = permissionStrings.stream()
-                .map(this::findPermissionByValue)
-                .collect(Collectors.toSet());
+    @PatchMapping("/{id}/permissions")
+    public ResponseEntity<Void> updateUserPermissions(
+            @PathVariable @Positive @NonNull Long id,
+            @RequestBody @Valid @NotEmpty @NonNull List<@NonNull String> permissionStrings) {
+        Set<Permission> permissions = userMapper.permissionStringsToPermissions(permissionStrings);
         userService.updateUserPermissions(id, permissions);
-        return ResponseEntity.ok().build();
-    }
-
-    private Permission findPermissionByValue(String permissionValue) {
-        return Arrays.stream(Permission.values())
-                .filter(permission -> permission.getPermission().equals(permissionValue))
-                .findFirst()
-                .orElseThrow(() -> new UserException("PERMISSION",
-                        String.format("Invalid permission: %s", permissionValue)));
+        return ResponseEntity.noContent().build();
     }
 
     @PreAuthorize("hasAuthority('user:create')")
     @PostMapping
-    public ResponseEntity<UserDTO> createUser(@RequestBody @Valid UserCreateDTO userCreateDTO) {
+    public ResponseEntity<UserDTO> createUser(@RequestBody @Valid @NonNull UserCreateDTO userCreateDTO) {
         User user = userMapper.userCreateDTOToUser(userCreateDTO);
         UserDTO createdUser = userMapper.userToUserDTO(userService.createUser(user));
 
@@ -92,8 +91,10 @@ public class UserController {
     }
 
     @PreAuthorize("hasAuthority('user:edit')")
-    @PutMapping("/{id}")
-    public ResponseEntity<UserDTO> updateUser(@PathVariable Long id, @RequestBody UserUpdateDTO userUpdateDTO) {
+    @PatchMapping("/{id}")
+    public ResponseEntity<UserDTO> updateUser(
+            @PathVariable @Positive @NonNull Long id,
+            @RequestBody @Valid @NonNull UserUpdateDTO userUpdateDTO) {
         User user = userMapper.userUpdateDTOToUser(userUpdateDTO);
         user.setId(id);
         UserDTO updatedUser = userMapper.userToUserDTO(userService.updateUser(user));
@@ -101,9 +102,9 @@ public class UserController {
     }
 
     @PreAuthorize("hasAuthority('user:delete')")
-    @DeleteMapping("/{userId}")
-    public ResponseEntity<Void> deleteUser(@PathVariable Long userId) {
-        userService.deleteUser(userId);
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteUser(@PathVariable @Positive @NonNull Long id) {
+        userService.deleteUser(id);
         return ResponseEntity.noContent().build();
     }
 }
